# dcpconv

./: .gitignore  CMakeLists.txt  DCPCONV_SPEC.md  Makefile  QUICKSTART.md  README.md  build.sh  err.txt
src/: main.cpp
src/color/: xyz_to_rgb.cpp  xyz_to_rgb.h
src/core/: pipeline.cpp  pipeline.h
src/decode/: j2k_decoder.cpp  j2k_decoder.h  pcm_decoder.cpp  pcm_decoder.h
src/encode/: aac_encoder.cpp  aac_encoder.h  h264_encoder.cpp  h264_encoder.h  h265_encoder.cpp  h265_encoder.h  prores_encoder.cpp  prores_encoder.h  video_encoder_base.h
src/input/: dcp_reader.cpp  dcp_reader.h  imf_reader.cpp  imf_reader.h  mxf_demuxer.cpp  mxf_demuxer.h
src/output/: mp4_muxer.cpp  mp4_muxer.h
src/subtitles/: cinecanvas_parser.cpp  cinecanvas_parser.h  smpte_tt_parser.cpp  smpte_tt_parser.h  subtitle_burner.cpp  subtitle_burner.h  subtitle_muxer.cpp  subtitle_muxer.h  ttml_parser.cpp  ttml_parser.h
